--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "",
-  "dependencies": {},
+  "packageManager": "pnpm@9.7.0",
   "devDependencies": {
     "@type-challenges/utils": "^0.1.1",
-    "typescript": "^4.7.4"
+    "typescript": "^5.5.4"
   },
   "scripts": {
     "test": "npx jest"
